--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,68 @@ a:hover {
 .navbar-inverse {
     padding: 1%;
 }
+
+@media (max-width: 767px) {
+    .nav-pills>li {
+        float: none;
+    }
+    .nav-pills {
+        text-align: center;
+    }
+    .header h1 {
+        font-size: 280%;
+        letter-spacing: 5px;
+    }
+    .header {
+        text-align: center;
+    }
+}
+
+.clear {
+    clear: both;
+    height: 63px;
+}
+
+.wrapper {
+    min-height: 100%;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+.films_block {
+    text-align: center;
+}
+
+.films_block img {
+    margin-bottom: 5%;
+    border-radius: 5px;
+    border: solid 5px #dad7d5;
+    width: 100%;
+}
+
+.film_label {
+    padding: 2%;
+    margin-bottom: 4%;
+}
+
+.margin-8 {
+    margin-top: 8%;
+}
+
+footer {
+    color: #666;
+    background: #222;
+    padding: 17px 0 18px 0;
+    border-top: 1px solid #000;
+}
+
+footer a {
+    color: #999;
+}
+
+footer a:hover {
+    color: #efefef;
+}
