--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ a:hover {
 
 .navbar-inverse {
     padding: 1%;
+    border-radius: 0;
 }
 
 @media (max-width: 767px) {
@@ -82,6 +83,42 @@ body {
 
 .margin-8 {
     margin-top: 8%;
+}
+
+.panel {
+    border: none;
+}
+
+.panel-body {
+    background-color: #f9f9f9;
+}
+
+.panel-info>.panel-heading {
+    background: #f0ad4e;
+    color: white;
+    border-color: transparent;
+}
+
+.sidebar-header {
+    font-size: 120%;
+    letter-spacing: 2px;
+}
+
+.form-control {
+    border-radius: 0px;
+}
+
+.input-lg {
+    font-size: 14px;
+}
+
+.list-group-item-warning {
+    color: #8a6d3d;
+    background-color: #f9f9f9;
+}
+
+.badge {
+    background-color: #000000;
 }
 
 footer {
