--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,22 @@ body {
     background-color: #000000;
 }
 
+.info-block {
+    font-size: 120%
+}
+
+.info-block .badge {
+    font-size: 80%;
+}
+
+.info-block span {
+    margin-right: 3%;
+}
+
+textarea.form-control {
+    height: 200px;
+}
+
 footer {
     color: #666;
     background: #222;
